# invoice_anomaly_detection_sieve

./: .env  .gitignore  CODE_REVIEW_FINDINGS.md  Makefile  README.md  architecture.md  implementation.md  pyproject.toml  requirements.md  runbook.md
app/: anomaly.py  audit.py  case.py  config.py  decision.py  duplicate_model.py  features.py  main.py  models.py  normalization.py  retrieval.py  rules.py  schema.sql  security.py  storage.py
app/index_templates/: invoices_text.json
ops/: docker-compose.yaml  mlflow.env  opensearch.env
samples/: invoice_example.json  sample_payloads.jsonl
scripts/: backfill_score.py  calc_vendor_baselines.py  init_db.py  init_s3.py  init_search.py  train_anomaly.py  train_duplicate.py
tests/: test_anomaly.py  test_decision.py  test_features.py  test_normalization.py  test_rules.py
