[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-anomaly-sieve"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "python-multipart==0.0.12",
  "psycopg[binary,pool]==3.2.3",
  "sqlalchemy==2.0.35",
  "alembic==1.13.2",
  "redis==5.0.8",
  "boto3==1.35.21",
  "opensearch-py==2.6.0",
  "numpy==2.1.1",
  "pandas==2.2.3",
  "scipy==1.14.1",
  "scikit-learn==1.5.2",
  "rapidfuzz==3.9.7",
  "mlflow==2.16.2",
  "joblib==1.4.2",
  "pyjwt[crypto]==2.9.0",
  "tenacity==9.0.0",
  "orjson==3.10.7",
  "xxhash==3.5.0"
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-cov==5.0.0", "ruff==0.6.8", "mypy==1.11.2"]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["app"]
